--- a/modules/core/themes/default/style.css
+++ b/modules/core/themes/default/style.css
@@ -1,119 +1,79 @@
 @import "content.css";
 
 body {
-	font-family: Georgia, sans-serif;
-	color: #333;
+    font-family: "Ubuntu", "Candara", Verdana, sans-serif;
+    color: #333;
+    padding: 10px;
+    background: #333;
 }
 
 a {
-	outline: none;	
-	color:#9c0000;
+    text-decoration: none;
 }
 
-img {
-	border: none;
+a:hover {
+    text-decoration: underline;
+}
+
+#page {
+    background: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    min-height: 90%;
+    opacity: 0.9;
 }
 
 #header {
-	overflow: hidden;	
+    height: 50px;
 }
 
-#header img {
-	float: left;	
+#header h1 {
+    display: inline-block;
+    float: left;
+    color: #c73e14;
+    font-size: 20px;
 }
 
-#menu {
-	float: left;
-	list-style: none;	
+#header h1 a {
+    color: #c73e14;
 }
 
-#menu li {
-	display: inline-block;	
+#header #menu-main ul {
+    text-align: right;
 }
 
-#menu li ul {
-	position: absolute;	
-	visibility: hidden;
-	padding-top:10px;
-	margin-left: -10px;
+#header #menu-main li {
+    display: inline-block;
 }
 
-#menu li:hover>ul {
-	visibility: visible;
+#header #menu-main li a {
+    display: block;
+    padding: 10px;
+    color: #c73e14;
+    text-decoration: none !important;
 }
 
-#menu li.active a,
-#menu li a:hover {
-	background: #666;
-	color:#eee;	
-}
-
-#menu li a {
-	display: inline-block;
-	padding: 5px 10px;
-	margin-right: 5px;
-	background: #eee;
-	-moz-border-radius:10px;
-	border-radius:10px; 	
-	text-decoration: none;
-	color:#333;
+#header #menu-main li.active a,
+#header #menu-main li a:hover {
+    border-bottom: solid 1px #c73e14;
 }
 
 #content {
-	width:600px;
-	margin:0 auto;
+    padding: 10px;
+    width: 900px;
+    margin: 0 auto;
 }
 
-#content h2 {
-	border-bottom:solid 1px #333;
+#content a {
+    color: #DF6300;
 }
 
-#content h3 a {
-	text-decoration: none;
-	color:#333;	
+#footer {
+    padding: 10px;
+    color: #eee;
 }
 
-	#content h3 a:hover {
-		text-decoration: underline;
-	}
-
-#content .post {
-	
-}
-
-pre,
-.notice,
-.error {
-	-moz-border-radius:10px;
-	border-radius:10px;
-	padding:10px;
-	margin-bottom:1em;
-	background:#9c1111;
-	color:#fff;
-}
-
-pre {
-	background:#eee;
-	color:#333;
-}
-
-.notice {
-	background:#ccc;
-	color:#333;
-}
-
-.comments,
-.user {
-	display:inline-block;
-	font-size:75%;
-	color:#666;
-	width:150px;
-}
-
-.post .bottom {
-	background:#eee;
-	margin-top:20px;
-	border-bottom:solid 1px #ccc;
-	border-top:solid 1px #ccc;
-	padding:2px;
+#footer a {
+    color: #fff;
 }
