--- a/modules/core/themes/_install/style.css
+++ b/modules/core/themes/_install/style.css
@@ -74,7 +74,7 @@ a:hover {
 }
 
 #header {
-    background: url(images/logo.png) no-repeat 20px 50%;
+    background: url(../../public/logo.png) no-repeat 20px 50%;
     width:100%;
     height: 100px;
 }
